--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   # Paquetes principales utilizados en el proyecto
+  carousel_slider: ^5.0.0
   flutter_chat_ui: ^1.6.15
   flutter_chat_types: ^3.6.2
   chewie: ^1.8.5
