--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ecommerce_int2
+name: my_new_project
 description: It is about a complete ecommerce app for Android and iOS.
 
 version: 1.0.1
