--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,10 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci && npm run build
+      - run: y
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{
-            secrets.FIREBASE_SERVICE_ACCOUNT_FLUTTERECOMMERCETEMPLATE_72969 }}
-          projectId: flutterecommercetemplate-72969
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_TU_TIENDA_TECNOLOGICA }}
+          projectId: tu-tienda-tecnologica
